--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://miqbalj.github.io/My-static-web/'
 languageCode = 'en-us'
 title = 'My Static Site'
 
